--- a/stacks/php53/Vagrantfile
+++ b/stacks/php53/Vagrantfile
@@ -34,18 +34,21 @@ Vagrant.configure(2) do |config|
   # Provider-specific configuration so you can fine-tune various
   # backing providers for Vagrant. These expose provider-specific options.
   # Example for VirtualBox:
-  
+
   config.vm.provider "virtualbox" do |vb|
     vb.name = "Stack_CentOS6.7_PHP5.3"
 
     # Display the VirtualBox GUI when booting the machine
     vb.gui = false
-  
+
+    # Disable remote desktop(RDP)
+    vb.customize ["modifyvm", :id, "--vrde", "off"]
+
     # Customize the amount of memory and cpu number on the VM:
     vb.memory = "2048"
     vb.cpus = 2
   end
-  
+
   # View the documentation for the provider you are using for more
   # information on available options.
 
