--- a/stacks/php5329/Vagrantfile
+++ b/stacks/php5329/Vagrantfile
@@ -34,20 +34,18 @@ Vagrant.configure(2) do |config|
   # Provider-specific configuration so you can fine-tune various
   # backing providers for Vagrant. These expose provider-specific options.
   # Example for VirtualBox:
-  config.vm.define 'controller' do |machine|
-    machine.vm.provider "virtualbox" do |vb|
-      vb.name = "Stack_PHP54_#{Time.now.to_i}"
+  config.vm.provider "virtualbox" do |vb|
+    vb.name = "Stack_PHP5329"
 
-      # Display the VirtualBox GUI when booting the machine
-      vb.gui = false
+    # Display the VirtualBox GUI when booting the machine
+    vb.gui = false
 
-      # Disable remote desktop(RDP)
-      vb.customize ["modifyvm", :id, "--vrde", "off"]
+    # Disable remote desktop(RDP)
+    vb.customize ["modifyvm", :id, "--vrde", "off"]
 
-      # Customize the amount of memory and cpu number on the VM:
-      vb.memory = "2048"
-      vb.cpus = 2
-    end
+    # Customize the amount of memory and cpu number on the VM:
+    vb.memory = "2048"
+    vb.cpus = 2
   end
 
   # View the documentation for the provider you are using for more
@@ -63,11 +61,15 @@ Vagrant.configure(2) do |config|
   # Enable provisioning with a shell script. Additional provisioners such as
   # Puppet, Chef, Ansible, Salt, and Docker are also available. Please see the
   # documentation for more information about their specific syntax and use.
-  config.vm.provision "ansible" do |ansible|
-    ansible.playbook = "provisioning/playbook.yml"
-    ansible.inventory_path = "provisioning/inventory"
-    #ansible.verbose = true
-    ansible.limit = "all"
-    ansible.sudo = true
-  end
+  # config.vm.provision "ansible" do |ansible|
+  #   ansible.playbook = "provisioning/playbook.yml"
+  #   ansible.inventory_path = "provisioning/inventory"
+  #   #ansible.verbose = true
+  #   ansible.limit = "all"
+  #   ansible.sudo = true
+  # end
+  config.vm.provision "shell" do |s|
+     s.path = "provisioning/provision.bash"
+     s.privileged = true
+   end
 end
