--- a/stacks/php53/Vagrantfile
+++ b/stacks/php53/Vagrantfile
@@ -22,8 +22,8 @@ Vagrant.configure(2) do |config|
   # Create a forwarded port mapping which allows access to a specific port
   # within the machine from a port on the host machine. In the example below,
   # accessing "localhost:8080" will access port 80 on the guest machine.
-  config.vm.network "forwarded_port", guest: 80, host: 8080
-  config.vm.network "forwarded_port", guest: 443, host: 8443
+  # config.vm.network "forwarded_port", guest: 80, host: 8000
+  # config.vm.network "forwarded_port", guest: 443, host: 4430
 
   # Share an additional folder to the guest VM. The first argument is
   # the path on the host to the actual folder. The second argument is
@@ -36,7 +36,7 @@ Vagrant.configure(2) do |config|
   # Example for VirtualBox:
 
   config.vm.provider "virtualbox" do |vb|
-    vb.name = "Stack_CentOS6.7_PHP5.3"
+    vb.name = "Stack_CentOS67_Dev"
 
     # Display the VirtualBox GUI when booting the machine
     vb.gui = false
@@ -62,8 +62,8 @@ Vagrant.configure(2) do |config|
   # Enable provisioning with a shell script. Additional provisioners such as
   # Puppet, Chef, Ansible, Salt, and Docker are also available. Please see the
   # documentation for more information about their specific syntax and use.
-  # config.vm.provision "shell", inline: <<-SHELL
-  #   sudo apt-get update
-  #   sudo apt-get install -y apache2
-  # SHELL
+  config.vm.provision "shell" do |s|
+     s.path = "provisioning/provision.bash"
+     s.privileged = true
+   end
 end
