--- a/stacks/dev/Vagrantfile
+++ b/stacks/dev/Vagrantfile
@@ -64,6 +64,6 @@ Vagrant.configure(2) do |config|
   # documentation for more information about their specific syntax and use.
   config.vm.provision "shell" do |s|
      s.path = "provisioning/provision.bash"
-     s.privileged = true
+     s.privileged = false
    end
 end
