--- a/stacks/dev/provisioning/httpd/httpd.conf
+++ b/stacks/dev/provisioning/httpd/httpd.conf
@@ -216,7 +216,7 @@ LoadModule version_module modules/mod_version.so
 #
 
 # Load PHP module
-LoadModule php5_module        /usr/lib64/httpd/modules/libphp5.so
+# LoadModule php5_module        /usr/lib64/httpd/modules/libphp5.so
 
 AddType application/x-httpd-php .php
 
